name:                jsonphp
version:             1.0
license:             BSD3
license-file:        LICENSE
author:              First Last
maintainer:          first@last.com
build-type:          Simple
cabal-version:       >=1.10
executable jsonphp
  main-is:             jsonphp.hs
  build-depends:       base < 5,
                       aeson,
                       text,
                       bytestring,
                       vector,
                       unordered-containers,
                       scientific
  default-language:    Haskell2010
